--- a/ToDoApplication/package.json
+++ b/ToDoApplication/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue3-toastify": "^0.2.1"
